# brew-python-resource-blocks

./: Cargo.toml  README.md
demo/: output.txt  requirements.txt
src/: main.rs  pypi.rs  spec.rs
