[package]
name = "brew-python-resource-blocks"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Generate Resource Blocks for Homebrew Python Formulae"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
